# supabase-automated-self-host

./: .gitignore  .prettierignore  LICENSE  readme.md  setup.sh
.github/scripts/: check_updates.py  pyproject.toml
.github/workflows/: check_updates.yaml  greet-issue-open.yaml  reusable_exec.yaml  stale-check.yaml  test-multiple-instances.yaml  test.yaml
docker/: .env.example  docker-compose.s3.yml  docker-compose.yml  update-db-pass.sh
docker/dev/: docker-compose.dev.yml
docker/utils/: add-new-auth-keys.sh  rotate-new-api-keys.sh  update-db-pass.sh
docker/volumes/api/: kong.yml
docker/volumes/functions/main/: index.ts
docker/volumes/logs/: vector.yml
docker/volumes/nginx/snippets/: proxy.conf
scripts/: check_updates.py  pyproject.toml  requirements.txt
test/: index.test.ts  package-lock.json  package.json  todos.sql  vitest.config.ts
